Renamed bower and node packages

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "New Thing",
+  "name": "new-thing",
   "version": "0.0.0",
   "authors": [
     "Duncan Smith <hello@duncanmsmith.com>"
